fixed problem with PC not showing up in deco, caused by renaming 'info' to 'deco' earlier

--- a/src/styles.css
+++ b/src/styles.css
@@ -304,7 +304,7 @@ h3 {
   margin: 20px auto;
   justify-content: space-between;
   padding: 0;
-  width: 904px;
+  width: 904.5px;
   height: 100%;
   grid-area: NavBar;
 }
